UserRegPosts (Controller-Marco): + fixed compile error for getFirst() on wgatPostsToShowList. replaced with get(0).